--- a/src/components/Navbar/NavbarStyle.css
+++ b/src/components/Navbar/NavbarStyle.css
@@ -1,8 +1,15 @@
-nav {
-    width: 80%;
-    margin: 0 auto;
+.navbar {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    height: 60px;
+} 
+.navbar-bg {
+    background-color: #64b9ed;
 }
 .navContainer {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
@@ -10,7 +17,7 @@ nav {
     display: flex;
     align-items: center;
 }
-.btnContainer button {
+.btnContainer button{
     border: none;
     background: transparent;
     cursor: pointer;
